methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  while (estSurBiscuit==false){
    if (getColorSol==Color.green){
    poseBrosse()
    leveBrosse()
    recule()
    avance()
    avance()
    }else{
      recule()
      gauche()
      avance()
    }
    }
  }
    
    // Write your code here
